week 7 mostly finished